testing/stage_15/valid/compare_pointer_size.c
int main()
{
	return sizeof(char*)==sizeof(short *)&&sizeof(short *)==sizeof(int *)&&sizeof (int *)==sizeof(long *)&&(sizeof(long *))==sizeof(int **);
}