testing/stage_15/invalid/short_long.c
int main()
{
	short long a=4;
	return a;
}